# WigleSSIDSearch

./: README.md  WigleSearch.py  pyproject.toml
.github/workflows/: release-on-publish.yml
